--- a/assets/stylesheets/_components.scss
+++ b/assets/stylesheets/_components.scss
@@ -46,6 +46,7 @@
 @import 'blocks/image-editor/style';
 @import 'blocks/inline-help/style';
 @import 'blocks/support-article-dialog/style';
+@import 'blocks/installments-plan-picker/style';
 @import 'blocks/like-button/style';
 @import 'blocks/location-search/style';
 @import 'blocks/nps-survey/style';
