Wechat Pay Logo and text

--- a/client/my-sites/checkout/checkout/style.scss
+++ b/client/my-sites/checkout/checkout/style.scss
@@ -912,6 +912,10 @@
 		margin: -20px 0;
 	}
 
+	.checkout__wechat {
+		width: 80px;
+	}
+
 	.select-dropdown__item-text {
 		top: 4px;
 		font-weight: bold;
