Tests for Gutenberg component example

--- a/assets/stylesheets/sections/devdocs.scss
+++ b/assets/stylesheets/sections/devdocs.scss
@@ -4,6 +4,4 @@
 @import 'devdocs/style';
 @import 'devdocs/design/style';
 @import 'devdocs/design/syntax.scss';
-
-// Gutenberg components
-@import '../../../node_modules/@wordpress/components/build-style/style';
+@import 'devdocs/gutenberg-components/style';
