Imports: Add the UI for the Squarespace importer
Although the Squarespace export is in WXR format so can be imported
using the WordPress importer, this sets up the UI so the import can be
identified as from Squarespace, and sets the stage for us to do further
preprocessing on the file.

--- a/client/my-sites/importer/style.scss
+++ b/client/my-sites/importer/style.scss
@@ -50,6 +50,9 @@
 	&.site-importer {
 		background-color: #faad4d;
 	}
+	&.squarespace {
+		background-color: #222;
+	}
 
 	@include breakpoint( '>960px' ) {
 		width: 56px;
