Split out QR Code display and transaction queries
- Split qr code component out from payment box (cant access state
from redux mapStateToProps)
- Waiting for your scan message
- Add spinner

--- a/client/my-sites/checkout/checkout/style.scss
+++ b/client/my-sites/checkout/checkout/style.scss
@@ -481,15 +481,16 @@
 		}
 	}
 
-	// Redirect Payment Box
+	// WeChat Payment Box
 	// -----------------------------------
-	.redirect-payment-box {
+	.wechat-payment-box {
 		.payment-box__content {
 			// WeChat Pay QR code Display
-			.checkout__payment-qrcode {
+			.checkout__wechat-qrcode {
 				text-align: center;
+				margin-bottom: 12px;
 			}
-			.checkout__payment-qrcode-redirect {
+			.checkout__wechat-qrcode-redirect {
 				@extend .supporting-text;
 				color: $gray-text-min;
 				font-size: 12px;
