--- a/client/gutenberg/extensions/editor-notes/style.scss
+++ b/client/gutenberg/extensions/editor-notes/style.scss
@@ -1,3 +1,5 @@
+@import '../../../../assets/stylesheets/shared/_colors.scss';
+
 .wp-block-a8c-editor-notes__box {
 	background-color: lighten( $alert-red, 40% );
 	border-color: $alert-red;
