Remove unrelated scss changes

--- a/assets/stylesheets/_components.scss
+++ b/assets/stylesheets/_components.scss
@@ -7,7 +7,7 @@
 // stylesheet order does not matter.
 // ==========================================================================
 
-@import '../../client/layout/style.scss';
+@import 'layout/style';
 
 @import 'account-recovery/components/account-recovery-error-message/style';
 @import 'account-recovery/forgot-username-form/style';
