--- a/client/my-sites/media/style.scss
+++ b/client/my-sites/media/style.scss
@@ -38,3 +38,9 @@
 	box-shadow: 0 0 0 1px transparentize( $gray-lighten-20, .5 ),
 		0 1px 2px $gray-lighten-30;
 }
+
+.single-media__item {
+	min-height: 700px;
+	position: relative;
+	background: $white;
+}
