--- a/client/my-sites/media/style.scss
+++ b/client/my-sites/media/style.scss
@@ -39,7 +39,7 @@
 		0 1px 2px $gray-lighten-30;
 }
 
-.single-media__item {
+.media__wrapper {
 	min-height: 700px;
 	position: relative;
 	background: $white;
